# pdf2epubx

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_exe.spec  pyproject.toml  rules.example.json  rules.universal.json
src/pdf2epubx/: SOURCES.txt  cache.py  chaptering.py  classifier.py  cleanup.py  cli.py  code_repair.py  converter.py  edit_rules.py  entry_points.txt  epub_validator.py  epub_writer.py  extractor.py  formula_detector.py  gui.py  image_optimizer.py  image_preprocessor.py  layoutlm_processor.py  logger.py  models.py  multiprocessing_converter.py  ocr.py  pdf_inspector.py  preflight.py  profiles.py  quality_scorer.py  renderer.py  requires.txt  rules.conservative.json  rules.headercheck.json  table_parser.py  text_repair.py  toc_parser.py  top_level.txt  utils.py
src/pdf2epubx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
