[project]
name = "pdf2epubx"
version = "0.3.0"
description = "Local PDF to EPUB converter with profiles for novels, technical books, facsimile and hybrid conversion"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24.0",
    "EbookLib>=0.18",
    "typer>=0.12.0",
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.3.0"
]

[project.optional-dependencies]
images = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0"
]
ml = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0"
]
opencv = [
    "opencv-python>=4.8.0"
]
full = [
    "pdf2epubx[images,ml,opencv]"
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
pdf2epubx = "pdf2epubx.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"